Submit the form adds an item to the checklist

--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="container">
-  <form data-payment-form="form">
+  <form data-coffee-order="form">
     <h1>Payment form</h1>
     <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
     <section>
