--- a/payment1.html
+++ b/payment1.html
@@ -12,7 +12,7 @@
     <h1>Payment Form</h1>
     <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
   </header>
-  <form data-payment-form="form">
+  <form data-coffee-order="form">
     <section>
       <h2>Contact information</h2>
       <div class="panel panel-default">
