--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="container">
-  <form data-coffee-order="form">
+  <form data-payment-form="form">
     <h1>Payment form</h1>
     <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
     <section>
@@ -82,11 +82,12 @@
       <p> <button type="submit">Validate the payment</button> </p>
     </section>
   </form>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js" charset="utf-8"></script>
+  <!-- jQuery Modal -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <script src="scripts/formhandler.js" charset="utf-8"></script>
-  <script src="scripts/datastore.js" charset="utf-8"></script>
-  <script src="scripts/truck.js" charset="utf-8"></script>
-  <script src="scripts/main.js" charset="utf-8"></script>
+  <script src="scripts/payment.js" charset="utf-8"></script>
 </body>
 
 </html>
