Submitting the payment form thanks the user in a modal dialog

--- a/payment1.html
+++ b/payment1.html
@@ -12,7 +12,7 @@
     <h1>Payment Form</h1>
     <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
   </header>
-  <form data-coffee-order="form">
+  <form data-payment-form="form">
     <section>
       <h2>Contact information</h2>
       <div class="panel panel-default">
@@ -87,9 +87,7 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
-    <script src="scripts/datastore.js" charset="utf-8"></script>
-    <script src="scripts/truck.js" charset="utf-8"></script>
-    <script src="scripts/main.js" charset="utf-8"></script>
+    <script src="scripts/payment.js" charset="utf-8"></script>
   </form>
 
 </body>
