--- a/payment_bootstrap.html
+++ b/payment_bootstrap.html
@@ -85,7 +85,10 @@
         <button type="submit" class="btn btn-default">Validate the payment</button>
       </div>
     </section>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js" charset="utf-8"></script>
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/payment.js" charset="utf-8"></script>
   </form>
